mobile menu fix Y overflow

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -82,7 +82,9 @@ header {
         left: 0;
         right: 0;
         padding: 1.25rem;
-    
+        max-height: 95vh;
+        overflow-y: scroll;
+        
         .close-menu-button {
             width: 100%;
             display: flex;
